fix: setting item head gap

--- a/style/ui/setting.styl
+++ b/style/ui/setting.styl
@@ -36,6 +36,9 @@
 .setting-item-desc
   color var(--color2)
   font-size 12px
+.setting-item-head
+  display flex
+  gap 16px
 .setting-item-body-shell
   position relative
   height 0px
